implement free and paid version and start implementing automated test

--- a/Jokes/app/build.gradle
+++ b/Jokes/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        testInstrumentationRunner "android.support.test.runner.AndroidJunitRunner"
     }
     buildTypes {
         release {
@@ -41,6 +42,14 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2'
+    androidTestCompile 'junit:junit:4.12'
     compile project(path: ':backend', configuration: 'android-endpoints')
 
 }
