--- a/Jokes/app/src/main/AndroidManifest.xml
+++ b/Jokes/app/src/main/AndroidManifest.xml
@@ -10,23 +10,28 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
+        android:theme="@style/AppTheme">
+        
+        <uses-library android:name="android.test.runner"/>
         <!-- This meta-data tag is required to use Google Play Services. -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".SplashActivity"
+                  android:label="Jokes">
 
             <intent-filter>
 
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
 
             </intent-filter>
+
+        </activity>
+
+        <activity android:name=".MainActivity"
+                  android:label="@string/app_name">
 
         </activity>
 
