--- a/Jokes/app/build.gradle
+++ b/Jokes/app/build.gradle
@@ -1,17 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 24
     buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.example.android.jokes"
         minSdkVersion 10
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJunitRunner"
     }
     buildTypes {
         release {
@@ -38,18 +41,15 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':javaJokes')
     compile project(':jokeslibrary')
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    freeCompile 'com.google.android.gms:play-services:10.0.1'
+    compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:24.1.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
-    androidTestCompile 'com.android.support:support-annotations:25.1.0'
+    androidTestCompile 'com.android.support:support-annotations:24.1.0'
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2'
     androidTestCompile 'junit:junit:4.12'
-    compile project(path: ':backend', configuration: 'android-endpoints')
-
 }
