--- a/Jokes/app/src/main/AndroidManifest.xml
+++ b/Jokes/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.jokes" >
+          package="com.example.android.jokes" >
 
     <!-- Include required permissions for Google Mobile Ads to run -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,14 +11,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        
+
         <uses-library android:name="android.test.runner"/>
         <!-- This meta-data tag is required to use Google Play Services. -->
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
 
-        <activity android:name=".SplashActivity"
+        <activity android:name="com.example.android.jokes.SplashActivity"
                   android:label="Jokes">
 
             <intent-filter>
@@ -30,7 +30,7 @@
 
         </activity>
 
-        <activity android:name=".MainActivity"
+        <activity android:name="com.example.android.jokes.MainActivity"
                   android:label="@string/app_name">
 
         </activity>
