--- a/Jokes/app/src/free/AndroidManifest.xml
+++ b/Jokes/app/src/free/AndroidManifest.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.android.jokes" >
+          package="com.example.android.jokes">
 
+    <!-- Include required permissions for Google Mobile Ads to run -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,10 @@
         android:theme="@style/AppTheme">
 
         <uses-library android:name="android.test.runner"/>
+        <!-- This meta-data tag is required to use Google Play Services. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
 
         <activity android:name="com.example.android.jokes.SplashActivity"
                   android:label="@string/app_name">
@@ -28,6 +33,12 @@
                   android:label="@string/app_name">
 
         </activity>
+
+        <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
 
     </application>
 
